Bug 154817 - Direct paragraph formatting using Paragraph dialog always adds 'Fill Gradient Name' and 'Fill Hatch Name' to paragraph direct formatting
Summary: Direct paragraph formatting using Paragraph dialog always adds 'Fill Gradient...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.2.0.0.beta1+
Hardware: All All
: medium normal
Assignee: Justin L
URL:
Whiteboard: target:7.6.0 target:7.5.4
Keywords:
Depends on:
Blocks:
 
Reported: 2023-04-15 02:02 UTC by Jim Raykowski
Modified: 2023-04-29 02:13 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jim Raykowski 2023-04-15 02:02:51 UTC
Steps to reproduce:

1. Open a new text document
2. Open the Styles Inspector
Ctrl+Alt+6 or Menu > View > Sidebar > Styles Inspector
3. Type a word or sentence, perhaps 'Lorem ipsum dolor'
4. Add a paragraph direct format property by using the Paragraph dialog
Menu > Format > Paragraph...
5. Change a property in the Paragraph dialog then press OK 

Results: The Styles Inspector shows 'Fill Gradient Name' and 'Fill Hatch Name' under Paragraph Direct Formatting whenever a paragraph property is changed using the Paragraph dialog.

Prior to  commit 3f6797c29e9672eba354400f24a669244fd746c0 'Fill Gradient Name' and 'Fill Hatch Name' were not added.

Author: Justin Luth <justin_luth@sil.org>
Date:   Mon Jun 21 16:56:04 2021 +0200

    tdf#132776 sw UI: make unique names for custom hatch and gradient
Comment 1 Buovjaga 2023-04-19 14:47:07 UTC
Repro.

Justin: what do you think?

Arch Linux 64-bit, X11
Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: cfa463cc5446e72a06db5a457bf4d50d4173f31e
CPU threads: 8; OS: Linux 6.2; UI render: default; VCL: kf5 (cairo+xcb)
Locale: fi-FI (fi_FI.UTF-8); UI: en-US
Calc: threaded
Built on 19 April 2023
Comment 2 Justin L 2023-04-19 15:07:00 UTC
That sounds like a problem. It will need to be filtered out unless a hatch/gradient is actually enabled.

The key question is whether this gets written out to the file (ODT/DOCX) or not. If not then the problem is minimal.
Comment 3 Justin L 2023-04-20 00:13:35 UTC
proposed patch at https://gerrit.libreoffice.org/c/core/+/150669
Comment 4 Commit Notification 2023-04-20 13:16:58 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/06c61d3581d95354d627c7de1a7d97b62c8f61c6

tdf#154817 sw UI: no hatch/gradient name if not selected

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2023-04-21 07:34:47 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/e915155353b72ed2401ffc99ed11b003d5990f17

tdf#154817 sw UI: no hatch/gradient name if not selected

It will be available in 7.5.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Jim Raykowski 2023-04-29 02:13:07 UTC
Verified fixed in:

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 9544920636bac75922ef858140f57ab24df77426
CPU threads: 4; OS: Linux 5.15; UI render: default; VCL: x11
Locale: en-US (C); UI: en-US
Calc: threaded