tdf#154817 sw UI: no hatch/gradient name if not selected

This fixes a LO 7.2.0 regression caused by
commit 3f6797c29e9672eba354400f24a669244fd746c0.

A unique name was being created for gradients and hatches
every time the paragraph dialog box was OK'd,
even if the Area tab was not selected or natigated to.

Only create the name if the gradient or hatch is actually
selected as the fill type.

Change-Id: I088954db07d025570b0f5ecd5785020052c6f1f5
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/150669
Tested-by: Jenkins
Reviewed-by: Jim Raykowski <raykowj@gmail.com>
Reviewed-by: Justin Luth <jluth@mail.com>
(cherry picked from commit 06c61d3581d95354d627c7de1a7d97b62c8f61c6)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/150715
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>